--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Varela+Round" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet"  type="text/css" href="./dist/index.css">
     <title>Document</title>
 </head>
 <body>
